--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -1,19 +1,19 @@
 .navbar {
-    margin-top: 34px;
-    margin-bottom: 34px;
-    display: flex;
-    justify-content: space-between;
-    color: #fbfbfb;
+  margin-top: 34px;
+  margin-bottom: 34px;
+  display: flex;
+  justify-content: space-between;
+  color: #fbfbfb;
 }
 
 .writing {
-    margin: 1.1rem; 
+  margin: 1.1rem;
 }
 
 .about {
-    margin: 1.1rem;
+  margin: 1.1rem 0;
 }
 
 .activeLinks {
-    border-bottom: 2px solid #4bb7ff;
+  border-bottom: 2px solid #4bb7ff;
 }
