--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -1,5 +1,5 @@
 .navbar {
-  margin-top: 34px;
+  margin-top: 32px;
   margin-bottom: 32px;
   display: flex;
   justify-content: space-between;
@@ -8,21 +8,28 @@
 
 .about {
   margin: 1.1rem;
+  opacity: 0.7;
 }
 
 .writing {
   margin: 1.1rem 0;
+  opacity: 0.7;
+}
+
+.navbar a:hover {
+  opacity: 0.9;
 }
 
 .activeLinks {
-  border-bottom: 1px solid #4bb7ff;
+  border-bottom: 2px solid #4bb7ff;
+  opacity: 1;
 }
 
-@media only screen and (min-width: 780px) {
+@media only screen and (min-width: 650px) {
   .navbar {
     margin-top: 64px;
     margin-bottom: 64px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 1.4rem;
   }
   .about {
