--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,8 +3,40 @@
   margin: 0;
   min-width: 0;
   max-width: 46rem;
-  width: 90%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
+  color: #fff;
+
 }
 
+.profileDetails {
+  margin-bottom: 2rem;
+  margin-top: 10rem;
+  word-spacing: 0.2rem;
+  line-height: 1.4;
+}
+
+.profileDetails h1 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.profileDetails p {
+  margin: 0.5rem 0;
+  font-size: 1.4rem;
+}
+
+.projects h2 {
+  margin-top: 8rem;
+  margin-bottom: 2rem;
+}
+
+
+@media only screen and (min-width: 650px) {
+  .someProjects {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+  
+}
