--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -9,11 +9,16 @@
 
 .details p {
   margin: 0.2rem 1rem;
+  opacity: 0.8;
 }
 
 @media only screen and (min-width: 650px) {
   .item {
-    padding: 1.5rem 0 2.5rem 0;
+    width: fit-content;
+    margin: 1.5rem 0;
+    border-radius: 20px;
+    min-width: 280px;
+    padding: 0.5rem;
   }
   .details h3 {
     margin: 0 20px;
@@ -21,5 +26,9 @@
 
   .details p {
     margin: 2px 20px;
+    opacity: 0.8;
+  }
+  .item:hover {
+    background-color: #504f4fa6;
   }
 }
